src/test/contracts/negative/regression_import_scope_B.mligo

let b = A.a

#import "regression_import_scope_A.mligo" "A"

let c = A.a
